--- a/src/components/StackCard.astro
+++ b/src/components/StackCard.astro
@@ -4,20 +4,20 @@ interface Props {
   icon: string;
   link: string;
   textSize: TextSize;
-  iconHeight: number;
+  iconSize: number;
   color: string;
   title: string;
 }
 import { Icon } from "astro-icon";
-const { icon, link, textSize, iconHeight, color, title }: Props = Astro.props;
+const { icon, link, textSize, iconSize, color, title }: Props = Astro.props;
 ---
 
 <a
   href={link}
-  class={`flex gap-3 px-3 py-2 items-center rounded-md text-${textSize} font-medium bg-${color}`}
   target="_blank"
   rel="noopener noreferrer"
+  class={`flex gap-3 px-3 py-2 items-center rounded-md text-${textSize} font-medium bg-${color}`}
 >
   {title}
-  <Icon name={icon} class={`h-${iconHeight}`} />
+  <Icon size={iconSize} name={icon} />
 </a>
