--- a/src/components/Stacks.astro
+++ b/src/components/Stacks.astro
@@ -8,7 +8,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="slate-800"
       icon="simple-icons:react"
-      iconHeight={9}
+      iconSize={40}
       link="https://reactjs.org/"
       textSize="xl"
       title="React"
@@ -16,7 +16,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="slate-800"
       icon="simple-icons:javascript"
-      iconHeight={9}
+      iconSize={40}
       link="https://www.javascript.com/"
       textSize="xl"
       title="JavaScript"
@@ -24,7 +24,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="slate-800"
       icon="simple-icons:typescript"
-      iconHeight={9}
+      iconSize={40}
       link="https://www.typescriptlang.org/"
       textSize="xl"
       title="TypeScript"
@@ -32,7 +32,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="violet-800"
       icon="simple-icons:nodedotjs"
-      iconHeight={9}
+      iconSize={40}
       link="https://expressjs.com/"
       textSize="xl"
       title="Node Express"
@@ -42,7 +42,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="emerald-700"
       icon="simple-icons:tailwindcss"
-      iconHeight={8}
+      iconSize={36}
       link="https://tailwindcss.com/"
       textSize="lg"
       title="TailwindCSS"
@@ -50,7 +50,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="emerald-700"
       icon="simple-icons:expo"
-      iconHeight={7}
+      iconSize={30}
       link="https://expo.dev/"
       textSize="lg"
       title="Expo"
@@ -58,7 +58,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="slate-800"
       icon="simple-icons:nextdotjs"
-      iconHeight={8}
+      iconSize={36}
       link="https://nextjs.org/"
       textSize="lg"
       title="Next"
@@ -66,7 +66,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="emerald-700"
       icon="simple-icons:html5"
-      iconHeight={8}
+      iconSize={36}
       link="https://developer.mozilla.org/pt-BR/docs/Web/HTML"
       textSize="lg"
       title="HTML"
@@ -74,7 +74,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="emerald-700"
       icon="cib:figma"
-      iconHeight={8}
+      iconSize={36}
       link="https://www.figma.com/"
       textSize="lg"
       title="Figma"
@@ -84,7 +84,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="emerald-700"
       icon="simple-icons:astro"
-      iconHeight={7}
+      iconSize={32}
       link="https://astro.build/"
       textSize="base"
       title="CSS"
@@ -92,7 +92,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="emerald-700"
       icon="simple-icons:css3"
-      iconHeight={7}
+      iconSize={32}
       link="https://developer.mozilla.org/pt-BR/docs/Web/CSS"
       textSize="base"
       title="CSS"
@@ -100,7 +100,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="violet-800"
       icon="simple-icons:prisma"
-      iconHeight={7}
+      iconSize={32}
       link="https://www.prisma.io/"
       textSize="base"
       title="Prisma"
@@ -108,7 +108,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="violet-800"
       icon="simple-icons:postgresql"
-      iconHeight={7}
+      iconSize={32}
       link="https://www.postgresql.org/"
       textSize="base"
       title="PostgreSQL"
@@ -125,7 +125,7 @@ import StackCard from "./StackCard.astro";
     <StackCard
       color="violet-800"
       icon="simple-icons:railway"
-      iconHeight={7}
+      iconSize={32}
       link="https://railway.app/"
       textSize="base"
       title="Railway"
