--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,3 @@
----
-import { Image } from "@astrojs/image/components";
----
-
 <section class="flex justify-between items-center flex-1">
   <div class="flex flex-col gap-12">
     <div>
@@ -22,12 +18,10 @@ import { Image } from "@astrojs/image/components";
       rel="noopener noreferrer">Me Contrate</a
     >
   </div>
-  <Image
+  <img
     width={384}
     height={384}
-    format="webp"
-    quality={100}
-    src="avatar-removebg-preview.png"
+    src="/avatar-removebg-preview.png"
     alt="avatar de Gabriel Nascimento"
   />
 </section>
