add SEO schema and robots.txt

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,16 +6,19 @@ import { Icon } from "astro-icon";
   <p class="font-vt323 text-7xl">G</p>
   <nav class="flex gap-12 items-center">
     <a
+      aria-label="Linkedin"
       href="https://www.linkedin.com/in/gabriel-jardim-nascimento/"
       target="_blank"
       rel="noopener noreferrer"><Icon class="w-9" name="line-md:linkedin" /></a
     >
     <a
+      aria-label="GitHub"
       href="https://github.com/gabinpoa"
       target="_blank"
       rel="noopener noreferrer"><Icon class="w-9" name="line-md:github" /></a
     >
     <a
+      aria-label="Email"
       href="mailto:gabrielnpoa@gmail.com"
       target="_blank"
       rel="noopener noreferrer"><Icon class="w-9" name="line-md:email" /></a
