--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -50,7 +50,7 @@ import { Icon } from "astro-icon";
     </div>
   </div>
   <img
-    class="xl:w-64 2xl:w-72 rounded-md shadow"
+    class="xl:w-64 2xl:w-72 h-auto rounded-md shadow"
     src="/pituca.png"
     alt="Screenshot de pitucadomax.vercel.app"
   />
