--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { Schema } from "astro-seo-schema";
 export interface Props {
   title: string;
 }
@@ -9,6 +10,20 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <Schema
+      item={{
+        "@context": "https://schema.org",
+        "@type": "Person",
+        name: "Gabriel Nascimento",
+        url: "https://gabrielnascimento.netlify.app/",
+        image: "",
+        sameAs: [
+          "https://www.linkedin.com/in/gabriel-jardim-nascimento/",
+          "https://github.com/gabinpoa",
+        ],
+        jobTitle: "Desenvolvedor Web E React Native",
+      }}
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
