adding more SEO tools

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,8 +23,8 @@ import { Icon } from "astro-icon";
       target="_blank"
       rel="noopener noreferrer"><Icon class="w-9" name="line-md:email" /></a
     >
-    <a href="" class="text-xl">Projetos</a>
-    <a href="" class="text-xl">Habilidades</a>
-    <a href="" class="text-xl">Tecnologias diferenciadas</a>
+    <a href="#projetos" class="text-xl">Projetos</a>
+    <a href="#stacks" class="text-xl">Habilidades</a>
+    <a href="#techs" class="text-xl">Tecnologias diferenciadas</a>
   </nav>
 </header>
