--- a/src/components/NewTechs.astro
+++ b/src/components/NewTechs.astro
@@ -1,4 +1,7 @@
-<section class="flex flex-wrap justify-center gap-x-16 gap-y-12 py-32">
+<section
+  id="techs"
+  class="flex flex-wrap justify-center gap-x-16 gap-y-12 py-32"
+>
   <article
     class="flex flex-col relative justify-between gap-3 max-w-[364px] rounded-md bg-slate-800 px-4 py-3"
   >
