--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon";
 ---
 
-<section class="flex py-40">
+<section id="projetos" class="flex py-40">
   <img
     class="xl:w-64 2xl:w-72 rounded-md shadow"
     src="/spotifan.png"
