--- a/src/components/Stacks.astro
+++ b/src/components/Stacks.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon";
 import StackCard from "./StackCard.astro";
 ---
 
-<section class="flex flex-col gap-4 py-32 items-center">
+<section id="stacks" class="flex flex-col gap-4 py-32 items-center">
   <div class="flex gap-7">
     <StackCard
       color="slate-800"
