--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,15 +1,19 @@
 ---
 import { Schema } from "astro-seo-schema";
+import { SEO } from "astro-seo";
 export interface Props {
   title: string;
 }
 
-const { title } = Astro.props;
+const { title }: Props = Astro.props;
 ---
 
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <SEO
+      title="Desenvolvedor Gabriel Nascimento"
+      description="Desenvolvedor full-stack apaixonado por tecnologia com habilidades em JavaScript, Typescript, HTML, CSS, SQL, React, React Native, Node.js, Express, Prisma, PostgreSQL e mais. Conheça meus projetos recentes e meus conhecimentos técnicos em meu portfólio pessoal."
+    />
     <Schema
       item={{
         "@context": "https://schema.org",
