add google verification

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,10 @@ const { title }: Props = Astro.props;
         jobTitle: "Desenvolvedor Web E React Native",
       }}
     />
+    <meta
+      name="google-site-verification"
+      content="L6yizr9JI1rrgEq3FDKVhuBxLucbZ9HLy8qQMGB3Tvw"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
