--- a/src/components/Stacks.astro
+++ b/src/components/Stacks.astro
@@ -4,9 +4,8 @@ import StackCard from "./StackCard.astro";
 ---
 
 <section id="stacks" class="flex flex-col gap-4 py-32 items-center">
-  <div class="flex gap-7">
+  <div class="flex gap-7 flex-wrap justify-center">
     <StackCard
-      color="slate-800"
       icon="simple-icons:react"
       iconSize={40}
       link="https://reactjs.org/"
@@ -14,7 +13,6 @@ import StackCard from "./StackCard.astro";
       title="React"
     />
     <StackCard
-      color="slate-800"
       icon="simple-icons:javascript"
       iconSize={40}
       link="https://www.javascript.com/"
@@ -22,7 +20,6 @@ import StackCard from "./StackCard.astro";
       title="JavaScript"
     />
     <StackCard
-      color="slate-800"
       icon="simple-icons:typescript"
       iconSize={40}
       link="https://www.typescriptlang.org/"
@@ -30,7 +27,6 @@ import StackCard from "./StackCard.astro";
       title="TypeScript"
     />
     <StackCard
-      color="violet-800"
       icon="simple-icons:nodedotjs"
       iconSize={40}
       link="https://expressjs.com/"
@@ -38,9 +34,8 @@ import StackCard from "./StackCard.astro";
       title="Node Express"
     />
   </div>
-  <div class="flex gap-6">
+  <div class="flex gap-6 flex-wrap justify-center">
     <StackCard
-      color="emerald-700"
       icon="simple-icons:tailwindcss"
       iconSize={36}
       link="https://tailwindcss.com/"
@@ -48,7 +43,6 @@ import StackCard from "./StackCard.astro";
       title="TailwindCSS"
     />
     <StackCard
-      color="emerald-700"
       icon="simple-icons:expo"
       iconSize={30}
       link="https://expo.dev/"
@@ -56,7 +50,6 @@ import StackCard from "./StackCard.astro";
       title="Expo"
     />
     <StackCard
-      color="slate-800"
       icon="simple-icons:nextdotjs"
       iconSize={36}
       link="https://nextjs.org/"
@@ -64,7 +57,6 @@ import StackCard from "./StackCard.astro";
       title="Next"
     />
     <StackCard
-      color="emerald-700"
       icon="simple-icons:html5"
       iconSize={36}
       link="https://developer.mozilla.org/pt-BR/docs/Web/HTML"
@@ -72,7 +64,6 @@ import StackCard from "./StackCard.astro";
       title="HTML"
     />
     <StackCard
-      color="emerald-700"
       icon="cib:figma"
       iconSize={36}
       link="https://www.figma.com/"
@@ -80,9 +71,8 @@ import StackCard from "./StackCard.astro";
       title="Figma"
     />
   </div>
-  <div class="flex gap-5">
+  <div class="flex gap-5 flex-wrap justify-center">
     <StackCard
-      color="emerald-700"
       icon="simple-icons:astro"
       iconSize={32}
       link="https://astro.build/"
@@ -90,7 +80,6 @@ import StackCard from "./StackCard.astro";
       title="CSS"
     />
     <StackCard
-      color="emerald-700"
       icon="simple-icons:css3"
       iconSize={32}
       link="https://developer.mozilla.org/pt-BR/docs/Web/CSS"
@@ -98,7 +87,6 @@ import StackCard from "./StackCard.astro";
       title="CSS"
     />
     <StackCard
-      color="violet-800"
       icon="simple-icons:prisma"
       iconSize={32}
       link="https://www.prisma.io/"
@@ -106,7 +94,6 @@ import StackCard from "./StackCard.astro";
       title="Prisma"
     />
     <StackCard
-      color="violet-800"
       icon="simple-icons:postgresql"
       iconSize={32}
       link="https://www.postgresql.org/"
@@ -114,7 +101,7 @@ import StackCard from "./StackCard.astro";
       title="PostgreSQL"
     />
     <a
-      class="flex gap-3 px-3 py-2 items-center rounded-md text-base font-medium bg-emerald-700"
+      class="flex gap-3 px-3 py-2 items-center rounded-md text-base font-medium bg-slate-800"
       href="https://qwik.builder.io/"
       target="_blank"
       rel="noopener noreferrer"
@@ -123,7 +110,6 @@ import StackCard from "./StackCard.astro";
       <img class="h-7" src="/qwik-white.png" alt="Qwik logo" />
     </a>
     <StackCard
-      color="violet-800"
       icon="simple-icons:railway"
       iconSize={32}
       link="https://railway.app/"
