--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Conheça Gabriel Jardim">
-  <main class="xl:px-48 2xl:px-80">
-    <div class="h-screen flex flex-col">
+  <main class="xl:px-48 2xl:px-80 px-3 overflow-hidden">
+    <div class="min-h-screen flex flex-col">
       <Header />
       <Hero />
     </div>
