--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,56 +2,115 @@
 import { Icon } from "astro-icon";
 ---
 
-<section id="projetos" class="flex py-40">
-  <img
-    class="xl:w-64 2xl:w-72 rounded-md shadow"
-    src="/spotifan.png"
-    alt="Screenshot de spotifan-theta.vercel.app"
-  />
-  <div class="flex-1 flex flex-col gap-16 justify-center">
-    <div class="bg-slate-800 px-3 py-4 space-y-5 shadow-sm mr-6 rounded-r-md">
-      <a
-        class="flex text-xl hover:text-blue-400 items-center font-medium gap-3"
-        href="http://spotifan-theta.vercel.app"
-        target="_blank"
-        rel="noopener noreferrer"
+<section id="projetos">
+  <div class="flex flex-col md:flex-row items-center my-20">
+    <img
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] w-fit rounded-md shadow"
+      src="/spotifan.png"
+      alt="Screenshot de spotifan-theta.vercel.app"
+    />
+    <div class="flex-1 flex flex-col gap-16 justify-center">
+      <div
+        class="bg-slate-800 px-3 py-4 space-y-5 shadow-sm md:mr-6 rounded md:rounded-l-none"
       >
-        Spotifan
-        <Icon class="h-6" name="line-md:external-link" /></a
+        <a
+          class="flex text-xl hover:text-blue-400 items-center font-medium gap-3"
+          href="http://spotifan-theta.vercel.app"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Spotifan
+          <Icon class="h-6" name="line-md:external-link" /></a
+        >
+        <p class="text-lg">
+          Veja seu artista mais tocado. Integrada com API do Spotify, permite
+          fazer login com sua conta e coletar dados permitidos.
+        </p>
+        <div class="text-emerald-500 flex gap-5 font-light">
+          <p>Spotify API</p>
+          <p>NextJS</p>
+          <p>React</p>
+        </div>
+      </div>
+
+      <div
+        class="bg-slate-800 px-3 py-4 space-y-5 shadow-sm md:ml-6 rounded md:rounded-r-none"
       >
-      <p class="text-lg">
-        Veja seu artista mais tocado. Integrada com API do Spotify, permite
-        fazer login com sua conta.
-      </p>
-      <div class="text-emerald-500 flex gap-5 font-light">
-        <p>Spotify API</p>
-        <p>NextJS</p>
-        <p>React</p>
+        <h3 class="flex text-xl items-center font-medium gap-3">
+          Voluntário em Recomeçar
+          <Icon class="h-6" name="line-md:external-link" />
+        </h3>
+        <p class="text-lg">
+          Trabalho voluntário destinado a um centro de tratamento de dependência
+          química feminino, com o objetivo de ajudar na divulgação do local.
+        </p>
+        <div class="text-emerald-500 flex gap-5 font-light">
+          <p>Proatividade</p>
+          <p>Empatia</p>
+          <p>Ajuda</p>
+        </div>
       </div>
     </div>
-    <div class="bg-slate-800 px-3 py-4 space-y-5 shadow-sm ml-6 rounded-l-md">
-      <a
-        class="flex text-xl hover:text-blue-400 items-center font-medium gap-3"
-        href="http://pitucadomax.vercel.app"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        Pituca
-        <Icon class="h-6" name="line-md:external-link" /></a
-      >
-      <p class="text-lg">
-        Fornece diversas imagens de uma cachorrinha muito querida e engraçada
-      </p>
-      <div class="text-emerald-500 flex gap-5 font-light">
-        <p>Vite</p>
-        <p>TailwindCSS</p>
-        <p>React</p>
-      </div>
-    </div>
+    <img
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] rounded-md shadow"
+      src="/recomecar.png"
+      alt="Screenshot de pitucadomax.vercel.app"
+    />
   </div>
-  <img
-    class="xl:w-64 2xl:w-72 h-auto rounded-md shadow"
-    src="/pituca.png"
-    alt="Screenshot de pitucadomax.vercel.app"
-  />
+
+  <div class="flex flex-col md:flex-row items-center my-20">
+    <img
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] rounded-md shadow"
+      src="/doctors-sc.jpg"
+      alt="Screenshot do app Doctors"
+    />
+    <div class="flex-1 flex flex-col gap-16 justify-center">
+      <div
+        class="bg-slate-800 px-3 py-4 space-y-5 shadow-sm md:mr-6 rounded md:rounded-l-none"
+      >
+        <h3 class="flex text-xl items-center font-medium gap-3">
+          Doctors
+          <Icon class="h-6" name="line-md:external-link" />
+        </h3>
+        <p class="text-lg">
+          Agende cirurgias em tempo real com facilidade. Escolha data, hora e
+          sala em um calendário interativo, e adicione informações sobre a
+          cirurgia.
+        </p>
+        <div class="text-emerald-500 flex gap-5 font-light">
+          <p>React Native</p>
+          <p>Tempo Real</p>
+          <p>Mobile</p>
+        </div>
+      </div>
+
+      <div
+        class="bg-slate-800 px-3 py-4 space-y-5 shadow-sm md:ml-6 rounded md:rounded-r-none"
+      >
+        <a
+          class="flex text-xl hover:text-blue-400 items-center font-medium gap-3"
+          href="http://pituca.vercel.app"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Pituca
+          <Icon class="h-6" name="line-md:external-link" /></a
+        >
+        <p class="text-lg">
+          Fornece diversas imagens de uma cachorrinha muito querida e engraçada.
+        </p>
+        <div class="text-emerald-500 flex gap-5 font-light">
+          <p>Vite</p>
+          <p>TailwindCSS</p>
+          <p>React</p>
+        </div>
+      </div>
+    </div>
+
+    <img
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] rounded-md shadow"
+      src="/pituca.png"
+      alt="Screenshot de pitucadomax.vercel.app"
+    />
+  </div>
 </section>
