fix image slide

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon";
 <section id="projetos">
   <div class="flex flex-col md:flex-row items-center my-20">
     <img
-      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] w-fit rounded-md shadow"
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] xl:h-auto w-fit rounded-md shadow"
       src="/spotifan.png"
       alt="Screenshot de spotifan-theta.vercel.app"
     />
@@ -52,7 +52,7 @@ import { Icon } from "astro-icon";
       </div>
     </div>
     <img
-      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] rounded-md shadow"
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] xl:h-auto rounded-md shadow"
       src="/recomecar.png"
       alt="Screenshot de pitucadomax.vercel.app"
     />
@@ -60,7 +60,7 @@ import { Icon } from "astro-icon";
 
   <div class="flex flex-col md:flex-row items-center my-20">
     <img
-      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] rounded-md shadow"
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] xl:h-auto rounded-md shadow"
       src="/doctors-sc.jpg"
       alt="Screenshot do app Doctors"
     />
@@ -108,7 +108,7 @@ import { Icon } from "astro-icon";
     </div>
 
     <img
-      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] rounded-md shadow"
+      class="xl:w-64 2xl:w-72 h-[calc(100vh-150px)] xl:h-auto rounded-md shadow"
       src="/pituca.png"
       alt="Screenshot de pitucadomax.vercel.app"
     />
